--- a/public/test.html
+++ b/public/test.html
@@ -10,10 +10,15 @@
         <link rel="stylesheet" href="{{url('css/sandbox.css')}}" >        
     </head>
     <body>
-        
-        <script>
-            
-        </script>
+        <style>
+div{
+transform:rotateY(60deg);
+}
+        </style>
+
+        <div>
+tぬるぽ
+        </div>
     </body>
 </html>
 
