--- a/public/test.html
+++ b/public/test.html
@@ -12,7 +12,14 @@
     <body>
         <style>
 div{
+animation-name:rot;
 transform:rotateY(60deg);
+animation-duration: 5s;
+animation-iteration-count: infinite;
+}
+@keyframes rot{
+0% {width: 50px; height: 50px; background-color: aqua;}
+100% {width: 200px; height: 50px; background-color: blue;}
 }
         </style>
 
