--- a/public/test.html
+++ b/public/test.html
@@ -18,9 +18,12 @@ animation-duration: 5s;
 animation-iteration-count: infinite;
 }
 @keyframes rot{
-0% {width: 50px; height: 50px; background-color: aqua;}
-100% {width: 200px; height: 50px; background-color: blue;}
+0% {width:background-color: aqua;
+rotateY(10deg);
 }
+100% {width: 200px; height: 50px; background-color: blue;
+rotateY(300deg);
+}}
         </style>
 
         <div>
