--- a/public/test.html
+++ b/public/test.html
@@ -18,10 +18,10 @@ animation-duration: 5s;
 animation-iteration-count: infinite;
 }
 @keyframes rot{
-0% {width:background-color: aqua;
+0% {
 rotateY(10deg);
 }
-100% {width: 200px; height: 50px; background-color: blue;
+100% {width: 200px; height: 50px; 
 rotateY(300deg);
 }}
         </style>
