--- a/public/test.html
+++ b/public/test.html
@@ -19,11 +19,13 @@ animation-iteration-count: infinite;
 }
 @keyframes rot{
 0% {
-rotateY(10deg);
+rotateZ(10deg);
 }
-100% {width: 200px; height: 50px; 
-rotateY(300deg);
-}}
+100% {
+
+rotateZ(300deg);
+}
+}
         </style>
 
         <div>
