--- a/public/test.html
+++ b/public/test.html
@@ -13,17 +13,17 @@
         <style>
 div{
 animation-name:rot;
-transform:rotateY(60deg);
+
 animation-duration: 5s;
 animation-iteration-count: infinite;
 }
 @keyframes rot{
 0% {
-rotateZ(10deg);
+transform:rotateZ(10deg);
 }
 100% {
 
-rotateZ(300deg);
+transform:rotateZ(300deg);
 }
 }
         </style>
