--- a/public/test.html
+++ b/public/test.html
@@ -19,11 +19,11 @@ animation-iteration-count: infinite;
 }
 @keyframes rot{
 0% {
-transform:rotateZ(10deg);
+transform:rotateY(0deg);
 }
 100% {
 
-transform:rotateZ(300deg);
+transform:rotateY(360deg);
 }
 }
         </style>
